--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "eslint-config-next": "13.2.4",
     "next": "13.2.4",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-kfc-menu": "^0.0.1",
+    "react-tabs-scrollable": "^1.0.10"
   }
 }
